# rhoai-mcp

./: .snyk  CONTRIBUTING.md  Containerfile  README.md  docker-compose.eval.yml  pyproject.toml
.claude/commands/: scaffold-plugin.md
.github/workflows/: ci.yml  container-build.yml  release-pypi.yaml
.tekton/: odh-rhoai-mcp-pull-request.yaml  odh-rhoai-mcp-push.yaml
deploy/kubernetes/: deployment.yaml
deploy/kustomize/base/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  params.env  service.yaml  serviceaccount.yaml
deploy/kustomize/overlays/kind/: config-patch.yaml  deployment-patch.yaml  kustomization.yaml  service-patch.yaml
deploy/kustomize/overlays/odh/: kustomization.yaml
deploy/kustomize/overlays/openshift/: clusterrole-patch.yaml  deployment-patch.yaml  kustomization.yaml  networkpolicy.yaml  route.yaml
deploy/kustomize/overlays/openshift-oidc/: README.md  clusterrole-patch.yaml  config-patch.yaml  kustomization.yaml  route-patch.yaml
deploy/kustomize/overlays/rhoai/: kustomization.yaml
docs/: ARCHITECTURE.md
docs/contributing/: adding-a-composite.md  adding-a-domain.md
docs/contributing/templates/composite/: __init__.py.tpl  models.py.tpl  tools.py.tpl
docs/contributing/templates/domain/: __init__.py.tpl  client.py.tpl  crds.py.tpl  models.py.tpl  resources.py.tpl  tools.py.tpl
evals/: config.py  conftest.py  deepeval_helpers.py
src/rhoai_mcp/: __init__.py  __main__.py  config.py  server.py
src/rhoai_mcp/auth/: middleware.py  oidc.py  token_review.py  user_context.py
src/rhoai_mcp/composites/: permissions.py  registry.py
src/rhoai_mcp/composites/meta/: tools.py
src/rhoai_mcp/composites/planner/: __init__.py  client.py  models.py  tools.py
src/rhoai_mcp/composites/training/: unified.py
src/rhoai_mcp/domains/: permissions.py  registry.py
src/rhoai_mcp/domains/_example/: __init__.py  client.py  models.py  tools.py
src/rhoai_mcp/domains/inference/: tools.py
src/rhoai_mcp/utils/: workflow_token.py
tests/: test_config.py  test_plugin_manager.py
tests/auth/: test_oidc.py  test_server_oidc.py  test_token_review.py  test_tool_filtering.py  test_tool_permissions.py  test_user_context.py
tests/composites/meta/: test_tools.py
tests/composites/planner/: test_client.py  test_models.py  test_plugin.py  test_tools.py
tests/deploy/: test_kustomize_overlays.py
tests/domains/_example/: test_client.py  test_models.py  test_tools.py
tests/domains/connections/: conftest.py  test_client.py  test_tools.py
tests/domains/inference/: test_tools.py
tests/domains/model_registry/: test_catalog_client.py  test_tools.py
tests/domains/pipelines/: test_client.py  test_tools.py
tests/domains/projects/: test_client.py  test_tools.py
tests/domains/storage/: test_client.py  test_tools.py
tests/integration/: test_crd_definitions.py  test_health_checks.py  test_permissions.py  test_plugin_discovery.py  test_tool_registration.py
tests/utils/: test_workflow_token.py
(+8 files in other folders)
